<resources>
    <string name="app_name">BasicCalculator</string>
    <string name="calculator">Calculator</string>
    <string name="enter_first_num">Enter first number</string>
    <string name="enter_second_num">Enter second number</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
</resources>